Imported bug fixes from Svn hsqldb/base